--- a/index.html
+++ b/index.html
@@ -119,5 +119,5 @@ $pdf->Output();
 <hr>
 Exemplo com MySQL - <a href="http://www.fpdf.org/en/script/script10.php" targer="_blank">MySQL</a><br>
 Exemplo com PostgreSQL - <a href="http://www.fpdf.org/en/script/script11.php" targer="_blank">PostgreSQL</a><br>
-<center><i><font size=2>Ribamar FS - <a href=https://ribafs.org target="_blank">https://ribafs.org</a> - ribafs[no]gmail[.]com </font></i> 
+<center><i><font size=2>Ribamar FS - <a href=https://ribamar.net.br target="_blank">https://ribamar.net.br</a> - ribafs[no]gmail[.]com </font></i> 
 </body> </html>
